@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: datafile.c,v 1.172.2.5 2009/10/10 18:45:30 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: datafile.c,v 1.172.2.6 2009/12/04 04:45:33 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - datafile.c */
@@ -2091,7 +2091,7 @@ f_stringcolumn(union argument *arg)
     (void) pop(&a);
     column = (int) real(&a);
 
-    if (!evaluate_inside_using)
+    if (!evaluate_inside_using || df_matrix)
 	int_error(c_token-1, "stringcolumn() called from invalid context");
 
     if (column < 1 || column > df_no_cols) {
