@@ -3,6 +3,9 @@
 	* src/set.c (set_margin): Limit range of set ?margin at screen <foo>
 	to 0 < foo < 1.
 
+	* src/datafile.c (f_stringcolumn) src/plot2d.c (eval_plots):
+	Enforce restrictions on which plot types can accept matrix data.
+
 2009-12-01  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* config/makefile.cyg config/makefile.dj2 config/makefile.mgw
